@@ -88,7 +88,48 @@
     </dependencies>
 
     <build>
-        <finalName>container</finalName>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+            <resource>
+                <targetPath>../mywrapper/etc</targetPath>
+                <directory>${project.basedir}/src/main/resources/</directory>
+                <includes>
+                    <include>**/*.xls</include>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.bat</include>
+                </includes>
+            </resource>
+            <resource>
+                <targetPath>../wrapper/jsw/mywrapper/bin</targetPath>
+                <directory>${project.basedir}/src/main/resources/</directory>
+                <includes>
+                    <include>**/*.bat</include>
+                </includes>
+            </resource>
+            <resource>
+                <targetPath>../wrapper/jsw/mywrapper/etc</targetPath>
+                <directory>${project.basedir}/src/main/resources/</directory>
+                <includes>
+                    <include>**/*.xls</include>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.bat</include>
+                </includes>
+            </resource>
+        </resources>
+
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}/src/test/java</directory>
+            </testResource>
+            <testResource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </testResource>
+        </testResources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -99,42 +140,100 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.1.1</version>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <id>generate start scripts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assemble</goal>
+                        </goals>
+                        <configuration>
+                            <repositoryLayout>flat</repositoryLayout>
+                            <programs>
+                                <program>
+                                    <!-- 通过批处理 运行Main类 -->
+                                    <mainClass>
+                                        com.flinkinfo.monitordata.main.App
+                                    </mainClass>
+                                    <name>init_app</name>
+                                </program>
+                            </programs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>generate-daemons</goal>
+                        </goals>
+                        <configuration>
+                            <repositoryLayout>flat</repositoryLayout>
+                            <target>${project.build.directory}/wrapper</target>
+                            <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                            <useDaemonIdAsWrapperConfName>true</useDaemonIdAsWrapperConfName>
+                            <daemons>
+                                <daemon>
+                                    <id>mywrapper</id>
+                                    <!-- 打包成windows服务的Main类 -->
+                                    <mainClass>com.flinkinfo.monitordata.main.App</mainClass>
+                                    <!-- <commandLineArguments> <commandLineArgument>start</commandLineArgument>
+                                        </commandLineArguments> -->
+                                    <!-- <jvmSettings> <initialMemorySize>20M</initialMemorySize> <maxMemorySize>200M</maxMemorySize>
+                                        <maxStackSize>128M</maxStackSize> </jvmSettings> -->
+                                    <platforms>
+                                        <platform>jsw</platform>
+                                    </platforms>
+                                    <generatorConfigurations>
+                                        <generatorConfiguration>
+                                            <generator>jsw</generator>
+                                            <includes>
+                                                <include>linux-x86-32</include>
+                                                <include>linux-x86-64</include>
+                                                <include>macosx-universal-32</include>
+                                                <include>macosx-universal-64</include>
+                                                <include>windows-x86-32</include>
+                                                <include>windows-x86-64</include>
+                                            </includes>
+                                            <configuration>
+                                                <property>
+                                                    <name>configuration.directory.in.classpath.first</name>
+                                                    <value>etc</value>
+                                                </property>
+                                            </configuration>
+                                        </generatorConfiguration>
+                                    </generatorConfigurations>
+                                </daemon>
+                            </daemons>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.2</version>
                 <configuration>
-                    <repositoryLayout>flat</repositoryLayout>
-                    <repositoryName>lib</repositoryName>
-                    <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
-                    <!-- 设置目标配置目录中使用本脚本 -->
-                    <configurationDirectory>conf</configurationDirectory>
-                    <!-- 　复制内容从“/src/main/resources”到目标配置
-                    　　                      在组装应用程序的目录 -->
-                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
-                    <!-- 在本脚本声明类,包括目标配置目录开始的-->
-                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
-                    <assembleDirectory>${project.build.directory}/server</assembleDirectory>
-                    <!-- Extra JVM arguments that will be included in the bin scripts -->
-                    <extraJvmArguments>-Xms768m -Xmx768m -XX:PermSize=128m
-                        -XX:MaxPermSize=256m -XX:NewSize=192m -XX:MaxNewSize=384m
-                    </extraJvmArguments>
-                    <!-- Generate bin scripts for windows and unix pr default -->
-                    <platforms>
-                        <platform>windows</platform>
-                        <platform>unix</platform>
-                    </platforms>
-                    <programs>
-                        <program>
-                            <mainClass>com.flinkinfo.monitordata.main.App</mainClass>
-                            <name>startup</name>
-                        </program>
-                    </programs>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <check/>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
 
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
